--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- Used for GitHub Site Deployment -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <link href='https://fonts.googleapis.com/css?family=Scheherazade New' rel='stylesheet'>
     <link rel="stylesheet" href="stylesheet.css">
     <meta charset="UTF-8">
